fixed some errors in html and css contrast violations

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -224,7 +224,7 @@ input[type="checkbox"] {
 button {
     margin: 1rem;
     background-color: var(--accent2-color);
-    color: #fff;
+    color: black;
     border: none;
     border-radius: .5rem;
     padding: .75rem;
@@ -234,4 +234,5 @@ button {
 button:hover {
     background-color: var(--primary-color);
 }
+
 
